# Requiem

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG.md  LICENSE  PACKAGING.md  PKGBUILD  README.md  README_CN.md  TROUBLESHOOTING.md  build.rs  debug.sh  idea.md  requiem.wxs
.github/: ARCH_LINUX.md  GITHUB_ACTIONS_SUMMARY.md  QUICK_REFERENCE.md  SETUP_CHECKLIST.md
.github/workflows/: AUR_PUBLISHING.md  ci.yml  dependency-update.yml  release.yml
locales/: en.json  zh.json
packaging/: ICONS.md  README.md
packaging/macos/: Info.plist  create-dmg.sh
packaging/windows/: build-msi.ps1
scripts/: convert-icons.sh  test-arch-build.sh  test-windows-build.ps1
src/: ai_client.rs  config.rs  http_client.rs  i18n.rs  main.rs  storage.rs
src/app/: message.rs  mod.rs  state.rs  update.rs
src/app/update/: collection.rs  key_value.rs  request.rs  tabs.rs  ui.rs
src/models/: ai_config.rs  body.rs  collection.rs  environment.rs  http_method.rs  key_value.rs  mod.rs  request.rs  request_tab.rs  response.rs  response_tab.rs  shortcuts.rs
src/ui/: body_highlighter.rs  icons.rs  mod.rs  request_editor.rs  request_list.rs  request_tabs.rs  response_viewer.rs  toast.rs  underline_input.rs  view.rs
src/ui/components/: ai_engine_picker.rs  ai_fill_dialog.rs  code_editor.rs  context_menu.rs  dialog.rs  environment_dialog.rs  environment_picker.rs  key_value_editor.rs  language_picker.rs  method_picker.rs  mod.rs  option_buttons.rs  settings_dialog.rs  shortcuts_dialog.rs  tabs_bar.rs  textarea.rs
src/utils/: formatter.rs  mod.rs  navigation.rs
